openmediavault-docker-gui (3.0.2) UNRELEASED; urgency=medium

  * Add r/o mode to bind mounts
  * Stability fixes to Docker service restart

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 04 Jan 2016 23:34:25 +0100

openmediavault-docker-gui (3.0.1) stable; urgency=medium

  * Fix postrm script to use systemd
  * Add fixes to ensure proper upgrade from 0.2.x plugin branch

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 04 Jan 2016 12:40:21 +0100

openmediavault-docker-gui (3.0.0) stable; urgency=low

  * Make plugin OMV 3.x compatible
  * Add support for network port types (tcp/udp)
  * Rename "Docker repo" to "Docker images repo"
  * Make time sync with host default when running container
  * Make restart always policy default when running container

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sun, 03 Jan 2016 21:56:59 +0100

openmediavault-docker-gui (0.2.21) stable; urgency=low

  * Add support for container logs 

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 30 Dec 2015 21:42:22 +0100

openmediavault-docker-gui (0.2.20) testing; urgency=low

  * Fix typo in init script

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sat, 14 Nov 2015 20:30:48 +0100

openmediavault-docker-gui (0.2.19) testing; urgency=low

  * Improved solution for remounting Docker runtime directory
    noexec at reboot

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Fri, 13 Nov 2015 20:19:11 +0100

openmediavault-docker-gui (0.2.18) testing; urgency=low

  * Add support for host name to the run container dialog
  * Auto wrap description text on repo tab
  * Add filtering on repo/image names in grids
  * Add state column with filtering to container grid
  * Make it possible to commit a container
  * Add checkbox to allow container time synchronization with host
  * Add autocomplete to container-side bind mounts
